# facefinder

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/facefinder/: __main__.py  analyze.py  postgresql_client.py
src/facer/: __init__.py  __main__.py  analyze.py  database.py  facer.py  postgres_env_loader.py  postgresql_client.py  test.py
src/facer/experimental/: face_pose.py  pose_mediapipe.py.bak  pose_pnp.py.bak  updown_face.py
src/facer/utils/: helper.py
