[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facefinder"
version = "0.1"
dependencies = [
  "opencv-python==4.11.0",
  "psycopg==3.2.4",
  "psycopg-binary==3.2.4.86",
  "python-dotenv==1.0.1",
]

[project.scripts]
facefinder = "facefinder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

